# mepbm

./: .gitignore  CMakeLists.txt  MEPBM.sln  README.md  analysis_instructions.md  data.cpp  data.h  histogram.cpp  histogram.h  main.cpp  mcmc_3step_all.cpp  mcmc_3step_time1.cpp  mcmc_3step_time2.cpp  mcmc_3step_time3.cpp  mcmc_3step_time4.cpp  mcmc_4step_all.cpp  models.cpp  models.h  ode_solver.cpp  ode_solver.h  statistics.cpp  statistics.h
applications/IrPOM_CVODE/: CMakeLists.txt  create_histogram1D_integer.m  marginal_distribution_comparison.m  mcmc_adaptive.cpp  mcmc_adaptive_shared_cov.cpp  mcmc_uniform.cpp  mean_parameter_comparison.m  mean_value_solution.cpp  samples.0.txt
applications/example/: CMakeLists.txt  calc_log_likelihood.cpp  mcmc.m  parse_numeric_output.m  postprocess.m  solve_ode.cpp
applications/ir-hpo4/: CMakeLists.txt  hpo4.inp  hpo4.out  marginal_distributions.m  mcmc.sh  mcmc_adaptive.cpp  mcmc_mech1_A_3step.cpp  mcmc_preliminary.cpp  ode_solution_mech1_A_3step.cpp  ode_solution_mech1_A_4step.cpp  ode_solver_timing_test.cpp  plot_sim_against_data.m  process_samples.cpp  process_samples_3step.cpp  process_samples_4step.cpp  process_samples_mech1_A_3step.cpp  solve_single_ode.cpp  summarize_samples.cpp
applications/ir-hpo4/mech1A/: CMakeLists.txt
applications/ir-hpo4/mech1A/sigmoid/: CMakeLists.txt
applications/ir-hpo4/mech1A/sigmoid/r_func/kl_divergence/: CMakeLists.txt  calc_log_likelihood.cpp  mcmc.m  postprocess.m  solve_ode.cpp
applications/ir-hpo4/mech1A/sigmoid/r_func/multinomial/: CMakeLists.txt  calc_log_likelihood.cpp  mcmc.m  solve_ode.cpp
applications/ir-hpo4/mech1A/sigmoid/r_func_capped/kl_divergence/: CMakeLists.txt  calc_log_likelihood.cpp  mcmc.m  solve_ode.cpp
applications/ir-hpo4/mech1A/sigmoid/r_func_capped/multinomial/: CMakeLists.txt  HPO4data.m  calc_log_likelihood.cpp  hpo4.inp.tpl  mcmc.m  solve_ode.cpp
applications/ir-hpo4/mech1A/step/r_func/kl_divergence/: CMakeLists.txt  calc_log_likelihood.cpp  mcmc.m  postprocess.m  solve_ode.cpp
applications/ir-hpo4/mech1A/step/r_func/multinomial/: CMakeLists.txt  calc_log_likelihood.cpp  hpo4.inp.tpl  mcmc.m  solve_ode.cpp
applications/ir-hpo4/mech1A/step/r_func_capped/kl_divergence/: CMakeLists.txt  calc_log_likelihood.cpp  mcmc.m  solve_ode.cpp
applications/ir-hpo4/mech1A/step/r_func_capped/multinomial/: CMakeLists.txt  mcmc.m  (+2 more)
applications/ir-hpo4/mech1B/sigmoid/r_func/: CMakeLists.txt
applications/ir-hpo4/mech1_A_3step/: CMakeLists.txt  mcmc_mech1_A_3step.cpp  samples.0.txt  samples.1.txt  samples.10.txt  samples.11.txt  samples.2.txt  samples.3.txt  samples.4.txt  samples.5.txt  samples.6.txt  samples.7.txt  samples.8.txt  samples.9.txt
applications/ir-hpo4/mech1_A_3step_noprecursor/: CMakeLists.txt  mcmc_mech1_A_3step_noprecursor.cpp  samples.0.txt  samples.1.txt  samples.10.txt  samples.11.txt  samples.2.txt  samples.3.txt  samples.4.txt  samples.5.txt  samples.6.txt  samples.7.txt  samples.8.txt  samples.9.txt
applications/ir-hpo4/mech1_A_4step/: CMakeLists.txt  mcmc_mech1_A_4step.cpp  samples.0.txt  samples.1.txt  samples.10.txt  samples.11.txt  samples.2.txt  samples.3.txt  samples.4.txt  samples.5.txt  samples.6.txt  samples.7.txt  samples.8.txt
applications/ir-hpo4/mech1_A_4step_noprecursor/: CMakeLists.txt  demc_mech1_A_4step_noprecursor.cpp  mcmc_mech1_A_4step_noprecursor.cpp  samples.0.txt  samples.1.txt  samples.10.txt  samples.11.txt  samples.2.txt  samples.3.txt  samples.4.txt  samples.5.txt  samples.6.txt  samples.7.txt  samples.8.txt  samples.9.txt
applications/ir-hpo4/mech2A/sigmoid/r_func_capped/: CMakeLists.txt
applications/ir-hpo4/postprocess/: plot_sim_against_data.m
applications/ir-pom-dissertation/: CMakeLists.txt  Finke_Model_MoM_V1.m  Finke_Model_MoM_V1_number.m  MoM_3Step_V1.m  MoM_PSD.m  MoM_likelihood.m  TEST_data_avg.m  acceptance_ratio_check.m  ar_box_plot.m  calc_ESS.m  calc_bin_probs_3step.cpp  calc_bin_probs_4step.cpp  calc_concentrations_3step.cpp  calc_concentrations_3step_simple.cpp  calc_likelihood_3step.cpp  calc_likelihood_3step_simplified_constants.cpp  calc_likelihood_4step.cpp  calc_likelihood_model_select.cpp  calc_likelihood_times_beta_3step.cpp  check_eMoM_vs_ODE_histograms.m  check_eMoM_vs_ODE_manual.m  convergence_check.m  custom_log_likelihood.m  custom_log_likelihood_eMoM.m  custom_log_likelihood_times_beta.m  diameters_to_bin_probability.m  draw_N_from_bins.m  independence_check.m  kde_to_bin_probability.m  mcmc_3step.m  mcmc_3step_AIES.m  mcmc_3step_AM.m  mcmc_3step_MH.m  mcmc_3step_MH_simple_const.m  mcmc_3step_eMoM_MH.m  mcmc_3step_scen1.m  mcmc_3step_scen2.m  mcmc_3step_scen3.m  mcmc_3step_scen4.m  mcmc_3step_scen5.m  (+15 more)
applications/ir-pom-dissertation/matlab_local_comp/: TEMdata.m  ar_box_plot.m  convergence_check.m  independence_check.m  plot_beta_prior.m  plot_trace_plots.m
applications/ode_solver_test/: CMakeLists.txt  comparisons.m  eigen_accurate.cpp  eigen_fast.cpp  ode_solver_test.cpp  ode_solver_test_3step.cpp  ode_solver_test_4step.cpp  sundials_dense.cpp  sundials_spbcgs.cpp  sundials_spfgmr.cpp  sundials_spgmr.cpp  sundials_sptfqmr.cpp
applications/optimization/: BO_cost.inp  BO_cost.out  CMakeLists.txt  LFIRE.m  atoms_to_diam.m  bayesian_optimization.m  bo_iterations_gif.m  calc_cost_function.cpp  calc_size_distribution.cpp  calc_size_distribution_LFIRE.cpp  calculateMutualInformation.m  confidence_bound.m  convergence_check.cpp  convergence_mutual_information.m  cost_func_shape.m  cost_func_shape_stochastic.m  create_mc_convergence_plots.m  draw_from_kde.m  draw_posterior_samples.m  expected_improvement.m  graph_GP_marginals.m  opt_exp_1time.m  opt_exp_4times.m  opt_exp_4times_a0_pom.m  optimize_psd_shape.m  optimize_psd_shape_a0_tend_pom.m  optimize_psd_shape_all.m  plot1DBayesOptIterations.m  plot_optimal_PSD.m  plot_optimal_experimental_design_choices.m  probability_of_improvement.m  save_posterior_samps_to_file.m  simulateData.m  simulateDataFromNumerator.m~  test_BO_fcn.m  test_OED.m  test_OED_algorithm.m  test_multinomial_bug.m  test_opt_runtimes.m  test_simnumerator.m  (+3 more)
(+590 files in other folders)
